[package]
name = "linkal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
pretty_env_logger = "0.4"
ureq = "2"
serde_json = "1.0"
bytes = "1.2.1"
regex = "1.6.0"
http = "0.2.8"
exile = "0.0.9"
