[package]
name = "linkal"
authors = ["Julien Malka <julien@malka.sh>"]
version = "0.1.0"
description = "Public calendar aggregator server"
edition = "2021"


[dependencies]
tokio = { version = "1.23.1", features = ["full"] }
warp = "0.3"
ureq = "2"
serde_json = "1.0"
bytes = "1.2.1"
regex = "1.6.0"
http = "0.2.8"
exile = "0.0.9"
phf = { version = "0.11", features = ["macros"] }
clap = {version = "3.2", features = ["derive"] }
